# apis-bibsonomy

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  checkandbump.sh  pyproject.toml  setup.py
.github/workflows/: add-to-project.yml  gitlint.yml  linters.yml  publish.yml  release-please.yml  release.yml
apis_bibsonomy/: admin.py  api_views.py  apps.py  autocompletes.py  forms.py  models.py  serializers.py  source.py  urls.py  utils.py  views.py  widgets.py
apis_bibsonomy/backends/: file.py
apis_bibsonomy/management/commands/: fetch.py  updatebibtex.py
apis_bibsonomy/migrations/: 0001_initial.py  0002_reference_folio.py  0003_auto_20230202_0953.py  0004_alter_reference_bibtex.py  0005_zoteroentry.py
apis_bibsonomy/static/apis_bibsonomy/css/: apis_bibsonomy.css
apis_bibsonomy/static/apis_bibsonomy/js/: apis_bibsonomy_init.js
apis_bibsonomy/static/css/: apis_bibsonomy.css
apis_bibsonomy/static/css/apis_bibsonomy/: zoteroentry_autocomplete.css
apis_bibsonomy/static/css/widgets/: autocomplete.css
apis_bibsonomy/static/js/: apis_bibsonomy.js
apis_bibsonomy/templates/: base.html
apis_bibsonomy/templates/apis_bibsonomy/: apis_bibsonomy_include.html  datalist.html  form_tag.html  link_to_reference_on_tag.html  link_to_reference_on_tag2.html  reference_confirm_delete.html  reference_detail.html  reference_form.html  reference_list.html  reference_list_modal.html  zoteroentry_autocomplete.html
apis_bibsonomy/templates/apis_bibsonomy/partials/: autofill_bibsonomy.html  fix_select2_bootstrap_focus.html  fix_select2_bootstrap_overflow.html  reference_list.html  reinit_select2.html
apis_bibsonomy/templates/widgets/: autocomplete.html
apis_bibsonomy/templatetags/: bibsonomy_templatetags.py
