[tool.poetry]
name = "apis-bibsonomy"
version = "0.9.1"
description = "Bibsonomy/Zotero plugin for managing refernces in APIS framework"
authors = ["Matthias Schlögl <m.schloegl@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = ">=3.0"
jmespath = "^0.10.0"
djangorestframework = "^3.15.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[tool.ruff]
lint.ignore = ["E501", "F403"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
