[tool.poetry]
name = "apis-bibsonomy"
version = "0.13.1"
description = "Bibsonomy/Zotero plugin for managing refernces in APIS framework"
authors = ["Matthias Schlögl <m.schloegl@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = ">=3.0"
jmespath = "^0.10.0"
djangorestframework = "^3.15.1"
requests = "^2.32.3"
django-crispy-forms = "^2.1"
django-autocomplete-light = "^3.11.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4.8,<0.9.0"
deptry = ">=0.17,<0.22"

[tool.ruff]
lint.ignore = ["E501", "F403"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.deptry.package_module_name_map]
djangorestframework = "rest_framework"
django-autocomplete-light = ["dal", "dal_select2"]
django-crispy-forms = "crispy_forms"

[tool.deptry.per_rule_ignores]
DEP001 = ["apis_core"]
